Una recocha esto

--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ciudad</title>
+
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    
+    <main>
+        <h2>Bienvenidos a mi Ciudad</h2>
+        <h3>Información General</h3>
+        <p>
+            Esta es una cuiddad muy bonita con muchos paisajes lindos para mirar al atardecer,
+            puedes ubicarte en un lugar alto donde puedas oabservar sus paisajes a gusto. 
+        </p>
+        <p>
+            En realidad es un <strong>pueblo</strong> muy pequeño, donde todas las personas se conocen entre si y 
+            son muy <i>alegres</i>  y <em>amables</em>, la base de su economia es el cuero.
+        </p>
+    </main>
+
+
+    <br>
+    <h1>Tipos de textos en HTML</h1>
+    <img src="tipos-texto-html.png" alt="Imagen tipos de texto" title="Img Html Labels" />
+    <br>
+    <h1>Citar textos</h1>
+    <blockquote>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo itaque vel ab quam consequatur eaque reprehenderit expedita, placeat ratione deleniti repellat. Maxime ex unde blanditiis aut cupiditate iste velit, officia dolor dignissimos non, nam vero perferendis delectus aliquid porro.
+    </blockquote>
+
+    <br>
+    <h2>Otro tipo de cita</h2>
+    <cite>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore doloribus, corrupti, ullam tenetur tempora illum, deleniti soluta nulla eaque incidunt optio harum esse natus! Hic perferendis nisi ratione obcaecati quam commodi at architecto dignissimos, doloremque iste mollitia, natus rem.
+    </cite><br>
+    <h2>Linea Horizontal</h2>
+    <br>
+    <hr>
+    <a href="#">top</a>
+    <ol>
+        <li><h2>hola</h2></li>
+        <li>hola</li>
+    </ol>
+    <dl>
+        <li>hola</li>
+    </dl>
+    <form action="">
+        <fieldset> <button> g</button>  <button>b</button></fieldset>
+        <label for="nombre">Nombre</label>
+        <input type="text">
+    </form>
+    <code>
+        console.log("f");
+    </code>
+    <kbd>
+        fsdfsdfds
+    </kbd>
+    <br>
+    <ruby>HOLA</ruby>
+    <br>
+    <a >hola</a>
+
+    <center>
+        <br>
+        <center>
+            <div class="uno">
+                hola
+            </div>
+        </center>
+    </center>
 </body>
 </html>
